--- a/api/package.json
+++ b/api/package.json
@@ -38,7 +38,7 @@
     "@nestjs/throttler": "^5.0.1",
     "@nestjs/websockets": "^10.3.0",
     "@prisma/client": "^6.18.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "bullmq": "^5.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -61,6 +61,7 @@
     "@nestjs/schematics": "^10.0.3",
     "@nestjs/testing": "^10.3.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
