--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,8 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test:cov": "jest --coverage --coverageReporters=text --coverageReporters=lcov --coverageReporters=html",
+    "test:cov:html": "jest --coverage --coverageReporters=html",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json --runInBand --detectOpenHandles",
     "test:e2e:watch": "jest --config ./test/jest-e2e.json --watch --runInBand",
@@ -28,7 +29,8 @@
     "prisma:studio": "prisma studio",
     "prisma:seed": "ts-node prisma/seed.ts",
     "migration:generate": "prisma migrate dev --create-only",
-    "migration:run": "prisma migrate deploy"
+    "migration:run": "prisma migrate deploy",
+    "export-swagger": "ts-node scripts/export-swagger.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.922.0",
